Building RESTful APIs with Django REST Framework

--- a/Pipfile
+++ b/Pipfile
@@ -7,8 +7,10 @@ name = "pypi"
 django = "*"
 django-debug-toolbar = "*"
 mysqlclient = "*"
+djangorestframework = "*"
 
 [dev-packages]
+autopep8 = "*"
 
 [requires]
 python_version = "3.10"
